fix: force explicit fill on SVG rects so toggle icon always visible

--- a/static/src/webclient/home_menu/home_menu.scss
+++ b/static/src/webclient/home_menu/home_menu.scss
@@ -44,6 +44,8 @@ $o-home-menu-custom-caption-shadow: 0 1px 2px rgba(0, 0, 0, .75), 0 2px 5px rgba
             .o_menu_toggle_icon {
                 width: 18px !important;
                 height: 18px !important;
+                // Force white fill on home menu background
+                rect { fill: #fff !important; }
             }
         }
 
